feat(frontend)WIP: adjustments for new license schema